Add integration tests using MySQL container (testcontainers)